# build-test-atomsciml

./: .gitignore  CMakeLists.txt  NOTICE  README.md  build_wheels.sh  setup.py
.github/workflows/: build-wheels-linux.yml  build-wheels-macos.yml  build-wheels-windows.yml
build_wheels/: build_wheels_centos7.sh  build_wheels_debian.sh  build_wheels_manylinux2014_x86_64.sh  build_wheels_manylinux_2_24_x86_64.sh
cmake/: atomsciml-config.cmake.in
cmd/: atomsciml_version.cpp
pybind11/: CMakeLists.txt  utils.cpp
src/atomsciml/: utils.cpp  utils.h
src/atomsciml/encoding/: molecule.cpp  molecule.h
test/gtest/: CMakeLists.txt  main.cpp
test/gtest/torch/: torch.cpp
test/gtest/utils/: utils.cpp
